--- a/src/app/datasrc/datasrc.component.html
+++ b/src/app/datasrc/datasrc.component.html
@@ -565,7 +565,79 @@
   </div>
   <p></p>
 
-  <!-- Step 18 -->
+  <ng-container *ngIf="sdsService.communityId">
+    <!-- Step 18 -->
+    <h3>OCS Communities</h3>
+    <p>Let's share the stream to the community.</p>
+    <p>First, get the tenant roles and find the community member role</p>
+    <button
+      id="getTenantRoles"
+      class="btn btn-primary"
+      (click)="getCommunityRole()"
+    >
+      Get Community Member Role
+    </button>
+    <br />
+    <div id="getTenantRolesMessage" *ngIf="getTenantRolesResponse">
+      Response: {{ getTenantRolesResponse }}
+    </div>
+    <div id="communityRoleMessage" *ngIf="communityRoleId">
+      Role Id: {{ communityRoleId }}
+    </div>
+    <br />
+    <p>
+      Next, share the stream to the community by granting permission to the
+      community role
+    </p>
+    <button
+      id="shareCommunityStream"
+      class="btn btn-primary"
+      (click)="shareCommunityStream()"
+    >
+      Share Stream to Community
+    </button>
+    <br />
+    <div id="shareCommunityStreamMessage" *ngIf="shareCommunityStreamResponse">
+      Response: {{ shareCommunityStreamResponse }}
+    </div>
+    <br />
+    <!-- Step 19 -->
+    <p>Search the community for the shared stream</p>
+    <button
+      id="searchCommunity"
+      class="btn btn-primary"
+      (click)="searchCommunity()"
+    >
+      Search the Community Streams
+    </button>
+    <br />
+    <div id="searchCommunityMessage" *ngIf="searchCommunityResponse">
+      Response: {{ searchCommunityResponse }}
+    </div>
+    <div *ngIf="communityStreams.length">Found community streams:</div>
+    <div *ngFor="let stream of communityStreams">
+      {{ stream.Id }}
+    </div>
+    <br />
+    <!-- Step 20 -->
+    <p>Get the last event from the community stream</p>
+    <button
+      id="getCommunityLast"
+      class="btn btn-primary"
+      (click)="getCommunityLast()"
+    >
+      Get Community Stream Last Event
+    </button>
+    <br />
+    <div id="getCommunityLastMessage" *ngIf="getCommunityLastResponse">
+      Response: {{ getCommunityLastResponse }}
+    </div>
+    <div id="communityLastMessage" *ngIf="communityLast">
+      {{ communityLast }}
+    </div>
+  </ng-container>
+
+  <!-- Step 21 -->
   <h3>Delete Values</h3>
   <p>
     Press the button below to delete all values from the SdsStream, pressing
@@ -583,7 +655,7 @@
     >Response: {{ button13Message }}</span
   >
 
-  <!-- Step 19 -->
+  <!-- Step 22 -->
   <h3>Create Stream with Secondary Index Values</h3>
   <p>
     Streams can have a secondary index that is different than its type primary
@@ -634,7 +706,7 @@
     >Response: {{ secondaryDeleteMessage }}</span
   >
 
-  <!-- Step 20 -->
+  <!-- Step 23 -->
   <h3>Add a type and stream with a compound index</h3>
   <p>Types can have a compound index.</p>
   <button
@@ -651,7 +723,7 @@
     >Response: {{ createCompoundTypeandStreamMessage }}</span
   >
 
-  <!-- Step 21 -->
+  <!-- Step 24 -->
   <h3>Data with a compound index</h3>
   <p>
     Types can have a compound index. With that you send data normally and
@@ -676,7 +748,7 @@
     >Response: {{ createAndRetrieveCompoundDataMessageData }}</span
   >
 
-  <!-- Step 22 -->
+  <!-- Step 25 -->
   <h3>Deleting types, streams and streamViews</h3>
   <p>
     Press the button below to delete the types, streams and streamViews that
