sdsconfig to pascal case

--- a/src/app/datasrc/datasrc.component.html
+++ b/src/app/datasrc/datasrc.component.html
@@ -565,7 +565,7 @@
   </div>
   <p></p>
 
-  <ng-container *ngIf="sdsService.communityId">
+  <ng-container *ngIf="sdsService.CommunityId">
     <!-- Step 18 -->
     <h3>OCS Communities</h3>
     <p>Let's share the stream to the community.</p>
