--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <div class="navbar-nav">
     <a class="nav-item nav-link" routerLink="/">Home</a>
     <!-- Step 1 -->
-    <a *ngIf="!loggedIn" class="nav-item nav-link" (click)="login()">Login</a>
+    <a *ngIf="!loggedIn" class="nav-item nav-link" (click)="login()" id="loginButton">Login</a>
     <a *ngIf="loggedIn" class="nav-item nav-link" (click)="logout()">Logout</a>
   </div>
 </nav>
